<resources>
    <string name="app_name">Calculator</string>
    <string name="Button_c">C</string>
    <string name="Button_ce">CE</string>
    <string name="ButtonPosOrNeg">+/-</string>
    <string name="divideButton">/</string>
    <string name="Button_7">7</string>
    <string name="Button_8">8</string>
    <string name="Button_9">9</string>
    <string name="Button_minus">-</string>
    <string name="Button_4">4</string>
    <string name="Button_5">5</string>
    <string name="Button_6">6</string>
    <string name="Button_add">+</string>
    <string name="Button_1">1</string>
    <string name="Button_2">2</string>
    <string name="Button_3">3</string>
    <string name="Button_Multiply">*</string>
    <string name="Button_0">0</string>
    <string name="Button_decimal">.</string>
    <string name="Button_equals">=</string>
    <string name="TextVal">0</string>

</resources>
