<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:text="@string/TextVal"
        android:textSize="@dimen/TextSize"
        android:textAlignment="center"
        android:layout_above="@+id/gridLayout"
        android:layout_marginTop="@dimen/MarginTopText"/>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:columnCount="4"
        android:rowCount="5"
        android:orientation="horizontal"
        android:useDefaultMargins="false">

        <Button
            android:text="@string/Button_c" />

        <Button
            android:text="@string/Button_ce" />

        <Button
            android:text="@string/ButtonPosOrNeg" />

        <Button
            android:layout_gravity="fill_horizontal"
            android:text="@string/divideButton" />

        <Button
            android:text="@string/Button_7" />

        <Button
            android:text="@string/Button_8" />

        <Button
            android:text="@string/Button_9" />

        <Button
            android:layout_gravity="fill_horizontal"
            android:text="@string/Button_minus" />

        <Button
            android:text="@string/Button_4" />

        <Button
            android:text="@string/Button_5" />

        <Button
            android:text="@string/Button_6" />

        <Button
            android:layout_gravity="fill_horizontal"
            android:text="@string/Button_add" />

        <Button
            android:text="@string/Button_1" />

        <Button
            android:text="@string/Button_2" />

        <Button
            android:text="@string/Button_3" />

        <Button
            android:layout_gravity="fill_horizontal"
            android:text="@string/Button_Multiply" />
        <Button
            android:text="@string/Button_0" />
        <Button
            android:text="@string/Button_decimal" />
        <Button
            android:background="@color/calcAccent"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="2"
            android:text="@string/Button_equals"/>
    </GridLayout>

</RelativeLayout>